add func selecionar()

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <main>
         <div>
             <label for="">Quantas letras?</label>
-            <select name="" id="">
+            <select name="" id="opcao" onchange="selecionar()">
+                <option value="0">Selecione</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -30,15 +31,15 @@
         </div>
         <div>           
             PALAVRA: 
-            <input class="plv" type="text" name="l1" id="l1" maxlength="1" size="1"> - 
-            <input class="plv" type="text" name="l2" id="l2" maxlength="1" size="1"> - 
-            <input class="plv" type="text" name="l3" id="l3" maxlength="1" size="1"> - 
-            <input class="plv" type="text" name="l4" id="l4" maxlength="1" size="1"> - 
-            <input class="plv" type="text" name="l5" id="l5" maxlength="1" size="1"> - 
-            <input class="plv" type="text" name="l6" id="l6" maxlength="1" size="1"> - 
-            <input class="plv" type="text" name="l7" id="l7" maxlength="1" size="1"> - 
-            <input class="plv" type="text" name="l8" id="l8" maxlength="1" size="1"> - 
-            <input class="plv" type="text" name="l9" id="l9" maxlength="1" size="1"> - 
+            <input class="plv" type="text" name="l1" id="l1" maxlength="1" size="1">
+            <input class="plv" type="text" name="l2" id="l2" maxlength="1" size="1">
+            <input class="plv" type="text" name="l3" id="l3" maxlength="1" size="1">
+            <input class="plv" type="text" name="l4" id="l4" maxlength="1" size="1">
+            <input class="plv" type="text" name="l5" id="l5" maxlength="1" size="1">
+            <input class="plv" type="text" name="l6" id="l6" maxlength="1" size="1">
+            <input class="plv" type="text" name="l7" id="l7" maxlength="1" size="1">
+            <input class="plv" type="text" name="l8" id="l8" maxlength="1" size="1">
+            <input class="plv" type="text" name="l9" id="l9" maxlength="1" size="1">
             <input class="plv" type="text" name="l10" id="l10" maxlength="1" size="1">
         </div>
         <div></div>
