criado pagina win

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <option value="9">9</option>
                 <option value="10">10</option>
             </select>
+            <input type="button" value="Reiniciar" onclick="restart()">
         </div>
         <div>           
             PALAVRA: 
