--- a/pg3.html
+++ b/pg3.html
@@ -27,7 +27,8 @@
         }
 
         #mario {
-            width: 100%;
+            width: 40%;
+            height: 40%;
         }
 
         a {
