--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
         </div>
         <div>           
             PALAVRA: 
-            <input class="plv" type="text" name="l1" id="l1" maxlength="1" size="1">
-            <input class="plv" type="text" name="l2" id="l2" maxlength="1" size="1">
-            <input class="plv" type="text" name="l3" id="l3" maxlength="1" size="1">
-            <input class="plv" type="text" name="l4" id="l4" maxlength="1" size="1">
-            <input class="plv" type="text" name="l5" id="l5" maxlength="1" size="1">
-            <input class="plv" type="text" name="l6" id="l6" maxlength="1" size="1">
-            <input class="plv" type="text" name="l7" id="l7" maxlength="1" size="1">
-            <input class="plv" type="text" name="l8" id="l8" maxlength="1" size="1">
-            <input class="plv" type="text" name="l9" id="l9" maxlength="1" size="1">
-            <input class="plv" type="text" name="l10" id="l10" maxlength="1" size="1">
+            <input class="caixa" type="text" name="l1" id="l1" maxlength="1" size="1">
+            <input class="caixa" type="text" name="l2" id="l2" maxlength="1" size="1">
+            <input class="caixa" type="text" name="l3" id="l3" maxlength="1" size="1">
+            <input class="caixa" type="text" name="l4" id="l4" maxlength="1" size="1">
+            <input class="caixa" type="text" name="l5" id="l5" maxlength="1" size="1">
+            <input class="caixa" type="text" name="l6" id="l6" maxlength="1" size="1">
+            <input class="caixa" type="text" name="l7" id="l7" maxlength="1" size="1">
+            <input class="caixa" type="text" name="l8" id="l8" maxlength="1" size="1">
+            <input class="caixa" type="text" name="l9" id="l9" maxlength="1" size="1">
+            <input class="caixa" type="text" name="l10" id="l10" maxlength="1" size="1">
         </div>
         <div></div>
         <div>
